# AEED

./: .gitignore  README.md
2021/: Crono_Examen.cpp  crono.cpp
2021/Examenes/: CMakeLists.txt  TREN.h  (+9 more)
2021/Septiembre21/: CMakeLists.txt  main.cpp  p1.hpp  p2.hpp  readme
2021/Septiembre21/ejercicios libro/: 6_5_ej7.h  7_2_ej10.h
2021/Septiembre21/examenes/: cocina.h  consultorio.h  cubiletes.h  diccionario.h  escalonada.h  estacion_tren.h  feb2019.h  hipermercado.h  hospital.h  tad_texto.hpp  tren.h
2021/Septiembre21/tads p/: pila_enla.h
Feb2022/: tokenbus.cpp
Feb2023/: almacen.cpp  cocina.cpp  diccionario.cpp  escalonada.cpp  functTexto  functTexto.cpp  hipermercado.cpp  hospital.cpp  simbolo.cpp  tren.cpp
Sept2022/: binario.cpp  cartelera.cpp  cocina.cpp  consultorio.cpp  cubilete  cubilete.cpp  diccionario  diccionario.cpp  escalonada  escalonada.cpp  estacion.cpp  hospital.cpp  jun2022.cpp  texto  texto.cpp  tren.cpp
curso2021-22/: CMakeLists.txt  Escalonada.h  Makefile  bicola.hpp  cocina.h  consultorio.h  cubilete.h  diccionario.h  ej4_parcial2022.h  hospital.h  main.cpp  p1.h  p2_cronometro.hpp  p3.cpp  p3.hpp  p4.cpp  p4.hpp  p5.h  p6.h  simbolo.h  texto.h  texto_feb21.h  tren.h
curso2021-22/tads_profesorado/: Cola_Cir.h  Cola_Din.h  ordenacion.cpp  pila_enla.h  pila_vec.h
jun2022/: cartelera.hpp  consultorio.hpp  cubilete.hpp  feb2022.hpp  febrero2014.hpp  hospital.hpp  main  main.cpp  sept21.h  simbolo.hpp  texto.hpp  tren.hpp
practicas 22_23/: caja_negra.cpp
sept2023/: cocina  cocina.cpp  escalonada.cpp  gestorImpresion.cpp  textov1.cpp
(+99 files in other folders)
