cmake_minimum_required(VERSION 3.20)
project(curso2021_22)

set(CMAKE_CXX_STANDARD 14)

add_executable(curso2021_22 main.cpp p2_cronometro.hpp p1.h tads_profesorado/cronometro.h tads_profesorado/ordenacion.h tads_profesorado/ordenacion.cpp p3.hpp p3.cpp p5.h bicola.hpp p6.h Escalonada.h texto.h ej4_parcial2022.h texto_feb21.h cubilete.h cocina.h tads_profesorado/listavec.h hospital.h diccionario.h consultorio.h tren.h)
