cmake_minimum_required(VERSION 3.20)
project(Septiembre21)

set(CMAKE_CXX_STANDARD 14)

add_executable(Septiembre21 main.cpp p1.hpp p2.hpp "ejercicios libro/7_2_ej10.h" examenes/hospital.h examenes/estacion_tren.h examenes/diccionario.h examenes/consultorio.h examenes/hipermercado.h examenes/tren.h examenes/escalonada.h examenes/cocina.h examenes/cubiletes.h)
